--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "laravel/framework": "5.4.*",
         "laravel/scout": "^3.0",
         "laravel/tinker": "~1.0",
+        "predis/predis": "^1.1",
         "tamayo/laravel-scout-elastic": "^3.0"
     },
     "require-dev": {
